--- a/style.css
+++ b/style.css
@@ -974,7 +974,7 @@ transition-duration: 0.6s;
   position: relative;
 }
 .item-thumbnail {
-  position: relative;
+    position: relative  
 }
 .portfolio-item img {
   transition: transform 0.5s ease 0s;
